--- a/Bookpouch/FilterWindow.xaml
+++ b/Bookpouch/FilterWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="Filter" Height="470" Width="370" Background="#2d2d30" ResizeMode="NoResize">
+        Title="Filter" Height="470" Width="370" Background="#2d2d30" ResizeMode="NoResize" SizeToContent="WidthAndHeight">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -34,24 +34,25 @@
             
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="8" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>        
 
         <Label Grid.Row="0" Grid.Column="0" Content="{local:Lng EditBookTitle}" Target="{Binding ElementName=Title}"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Name="Title" LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="0" Grid.Column="2" Name="Title" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng EditBookAuthor}" Target="{Binding ElementName=Author}"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Name="Author" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="1" Grid.Column="2" Name="Author" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng EditBookContributor}" Target="{Binding ElementName=Contributor}"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Name="Contributor" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="2" Grid.Column="2" Name="Contributor" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="3" Grid.Column="0" Content="{local:Lng EditBookPublisher}" Target="{Binding ElementName=Publisher}"/>
-        <TextBox Grid.Row="3" Grid.Column="1" Name="Publisher" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="3" Grid.Column="2" Name="Publisher" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="4" Grid.Column="0" Content="{local:Lng EditBookLanguage}" Target="{Binding ElementName=Language}"/>
-        <ComboBox Grid.Row="4" Grid.Column="1" Name="Language" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged" SelectedIndex="0">
+        <ComboBox Grid.Row="4" Grid.Column="2" Name="Language" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged" SelectedIndex="0">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -63,39 +64,39 @@
         </ComboBox>
 
         <Label Grid.Row="5" Grid.Column="0" Content="{local:Lng EditBookSeries}" Target="{Binding ElementName=Series}"/>
-        <TextBox Grid.Row="5" Grid.Column="1" Name="Series" Loaded="TextBox_OnLoaded"  LostFocus="TextBox_OnChanged"/>
+        <TextBox Grid.Row="5" Grid.Column="2" Name="Series" Loaded="TextBox_OnLoaded"  LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng EditBookPublished}" Target="{Binding ElementName=Published}"/>
-        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="6" Grid.Column="2" Orientation="Horizontal">
             <DatePicker  Name="Published" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
             <Button Margin="5 0 0 0" VerticalAlignment="Top" Click="PublishedRange_OnClick" ToolTip="{local:Lng HintDateRange}">=</Button>
         </StackPanel>
         
 
         <Label Grid.Row="7" Grid.Column="0" Content="{local:Lng EditBookCreated}" Target="{Binding ElementName=Created}"/>        
-        <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="7" Grid.Column="2" Orientation="Horizontal">
             <DatePicker Name="Created" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
             <Button Margin="5 0 0 0" VerticalAlignment="Top" Click="CreatedRange_OnClick" ToolTip="{local:Lng HintDateRange}">=</Button>
         </StackPanel>
 
         <Label Grid.Row="8" Grid.Column="0" Content="{local:Lng EditBookCategory}" Target="{Binding ElementName=Category}"/>
-        <TextBox Grid.Row="8" Grid.Column="1" Name="Category"  Loaded="Category_OnLoaded" LostFocus="TextBox_OnChanged"
+        <TextBox Grid.Row="8" Grid.Column="2" Name="Category"  Loaded="Category_OnLoaded" LostFocus="TextBox_OnChanged"
                  ToolTip="{local:Lng HintEditBookCategory}"/>
 
 
         <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng EditBookFavorite}" Target="{Binding ElementName=Favorite}"/>
-        <CheckBox Grid.Row="9" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" IsThreeState="True" 
+        <CheckBox Grid.Row="9" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" IsThreeState="True" 
                   Name="Favorite" ToolTip="{local:Lng HintEditBookFavorite}"/>
 
         <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng EditBookSync}" Target="{Binding ElementName=Sync}"/>
-        <CheckBox Grid.Row="10" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Name="Sync" IsThreeState="True" ToolTip="{local:Lng HintEditBookSync}"/>
+        <CheckBox Grid.Row="10" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Name="Sync" IsThreeState="True" ToolTip="{local:Lng HintEditBookSync}"/>
 
         <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng EditBookDescription}"  Target="{Binding ElementName=Description}"/>
-        <TextBox Grid.Row="11" Grid.Column="1" Name="Description" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
+        <TextBox Grid.Row="11" Grid.Column="2" Name="Description" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />
 
         <Label Grid.Row="12" Grid.Column="0" Content="{local:Lng EditBookPath}"  Target="{Binding ElementName=Path}"/>
-        <TextBox Grid.Row="12" Grid.Column="1" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />       
+        <TextBox Grid.Row="12" Grid.Column="2" Name="Path" LostFocus="TextBox_OnChanged"  TextWrapping="Wrap" />       
         
-        <Button Grid.Row="13" Grid.Column="1" Click="ApplyFilter_OnClick" VerticalAlignment="Top" Margin="0 5 0 0" Content="{local:Lng ApplyFilter}"/>
+        <Button Grid.Row="13" Grid.Column="2" Click="ApplyFilter_OnClick" VerticalAlignment="Top" Margin="0 5 0 0" Content="{local:Lng ApplyFilter}"/>
     </Grid>
 </Window>
