--- a/Bookpouch/Settings.xaml
+++ b/Bookpouch/Settings.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Bookpouch"
-        Title="Settings" Height="620" Width="400" Background="#2d2d30" ResizeMode="NoResize">
+        Title="Settings" Height="620" Width="400" SizeToContent="WidthAndHeight" Background="#2d2d30" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -37,12 +37,13 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="8"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Content="{local:Lng SettingsLanguage}" Target="{Binding ElementName=UiLanguage}"/>
-        <ComboBox Grid.Row="0" Grid.Column="1" Name="UiLanguage" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged" SelectedIndex="0">
+        <ComboBox Grid.Row="0" Grid.Column="2" Name="UiLanguage" Loaded="Language_OnLoaded" SelectionChanged="Language_OnSelectionChanged" SelectedIndex="0">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -54,10 +55,10 @@
         </ComboBox>
 
         <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng SettingsSplashScreen}" Target="{Binding ElementName=SplashScreen}"/>
-        <CheckBox Grid.Row="1" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="SplashScreen" ToolTip="{local:Lng HintSettingsSplashscreen}"/>
+        <CheckBox Grid.Row="1" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="SplashScreen" ToolTip="{local:Lng HintSettingsSplashscreen}"/>
 
         <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng SettingsReader}" Target="{Binding ElementName=Reader}"/>
-        <ComboBox Grid.Row="2" Grid.Column="1" Name="Reader" Width="150" Height="auto" Loaded="Reader_OnLoaded" SelectionChanged="Reader_OnSelectionChanged" ToolTip="{local:Lng HintSettingsReader}">
+        <ComboBox Grid.Row="2" Grid.Column="2" Name="Reader" Width="150" Height="auto" Loaded="Reader_OnLoaded" SelectionChanged="Reader_OnSelectionChanged" ToolTip="{local:Lng HintSettingsReader}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -68,7 +69,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Border Grid.Row="3" Grid.Column="1" Name="UnknownDeviceForm" Visibility="Collapsed" Background="#58585f" CornerRadius="6" Width="260" Padding="10" HorizontalAlignment="Left">
+        <Border Grid.Row="3" Grid.Column="2" Name="UnknownDeviceForm" Visibility="Collapsed" Background="#58585f" CornerRadius="6" Width="260" Padding="10" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Opacity="1" BlurRadius="10" Color="#383838"   ShadowDepth="0"/>
             </Border.Effect>
@@ -85,45 +86,45 @@
                     <ColumnDefinition Width="150" />
                 </Grid.ColumnDefinitions>
 
-                <Button Content="{local:Lng SettingsReaderCustomHint}" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="1" />
+                <Button Content="{local:Lng SettingsReaderCustomHint}" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="2" />
 
                 <Label Grid.Row="1" Grid.Column="0" Content="{local:Lng SettingsModel}" Target="{Binding ElementName=DeviceModel}"/>
-                <TextBox Grid.Row="1" Grid.Column="1" Width="150" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsModel}"/>
+                <TextBox Grid.Row="1" Grid.Column="2" Width="150" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsModel}"/>
 
                 <Label Grid.Row="2" Grid.Column="0" Content="{local:Lng SettingsPnp}" Target="{Binding ElementName=DevicePnpId}"/>
-                <TextBox Grid.Row="2" Grid.Column="1" Width="150" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsPnp}"/>
+                <TextBox Grid.Row="2" Grid.Column="2" Width="150" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsPnp}"/>
 
                 <Label Grid.Row="3" Grid.Column="0" Content="{local:Lng SettingsBookDir}" Target="{Binding ElementName=DeviceBooksDir}" />
-                <TextBox Grid.Row="3" Grid.Column="1" Width="150" Name="DeviceBooksDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsDir}"/>                
+                <TextBox Grid.Row="3" Grid.Column="2" Width="150" Name="DeviceBooksDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsDir}"/>                
             </Grid>
         </Border>
 
         <Label Grid.Row="4" Grid.Column="0" Content="{local:Lng SettingsAutosync}" Target="{Binding ElementName=UsbAutoSync}"/>
-        <CheckBox Grid.Row="4" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="{local:Lng HintSettingsAutosync}"/>
+        <CheckBox Grid.Row="4" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="UsbAutoSync" ToolTip="{local:Lng HintSettingsAutosync}"/>
 
         <Label Grid.Row="5" Grid.Column="0" Content="{local:Lng SettingsTray}" Target="{Binding ElementName=CloseIntoTray}"/>
-        <CheckBox Grid.Row="5" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CloseIntoTray" ToolTip="{local:Lng HintSettingsTray}"/>
+        <CheckBox Grid.Row="5" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CloseIntoTray" ToolTip="{local:Lng HintSettingsTray}"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="{local:Lng SettingsAutoStart}" Target="{Binding ElementName=AutoStart}"/>
-        <CheckBox Grid.Row="6" Grid.Column="1" Checked="AutoStart_OnChecked" Unchecked="AutoStart_OnChecked" Loaded="AutoStart_OnLoaded" Name="AutoStart" ToolTip="{local:Lng HintAutoStart}"/>
+        <CheckBox Grid.Row="6" Grid.Column="2" Checked="AutoStart_OnChecked" Unchecked="AutoStart_OnChecked" Loaded="AutoStart_OnLoaded" Name="AutoStart" ToolTip="{local:Lng HintAutoStart}"/>
         
         <Label Grid.Row="7" Grid.Column="0" Content="{local:Lng SettingsOnlyOne}" Target="{Binding ElementName=OnlyOne}"/>
-        <CheckBox Grid.Row="7" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyOne" ToolTip="{local:Lng HintOnlyOne}"/>
+        <CheckBox Grid.Row="7" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyOne" ToolTip="{local:Lng HintOnlyOne}"/>
 
         <Label Grid.Row="8" Grid.Column="0" Content="{local:Lng SettingsOnlyManualCategories}" Target="{Binding ElementName=OnlyManualCategories}"/>
-        <CheckBox Grid.Row="8" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyManualCategories" ToolTip="{local:Lng HintOnlyManualCategories}"/>
+        <CheckBox Grid.Row="8" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="OnlyManualCategories" ToolTip="{local:Lng HintOnlyManualCategories}"/>
 
         <Label Grid.Row="9" Grid.Column="0" Content="{local:Lng SettingsCheckCoverDimensions}" Target="{Binding ElementName=CheckCoverDimensions}"/>
-        <CheckBox Grid.Row="9" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CheckCoverDimensions" ToolTip="{local:Lng HintCheckCoverDimensions}"/>
+        <CheckBox Grid.Row="9" Grid.Column="2" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="CheckCoverDimensions" ToolTip="{local:Lng HintCheckCoverDimensions}"/>
 
         <Label Grid.Row="10" Grid.Column="0" Content="{local:Lng SettingsDescriptionMaxLength}" Target="{Binding ElementName=DescriptionMaxLength}" />
-        <TextBox Grid.Row="10" Grid.Column="1" Width="80" Name="DescriptionMaxLength" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsDescriptionMaxLength}"/>
+        <TextBox Grid.Row="10" Grid.Column="2" Width="80" Name="DescriptionMaxLength" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="{local:Lng HintSettingsDescriptionMaxLength}"/>
 
         <Label Grid.Row="11" Grid.Column="0" Content="{local:Lng SettingsBooksDir}" Target="{Binding ElementName=BooksDir}" />
-        <Button Grid.Row="11" Grid.Column="1" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
+        <Button Grid.Row="11" Grid.Column="2" Name="BooksDir"  HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="BooksDir_OnLoaded" Click="BooksDir_OnClick" ToolTip="{local:Lng HintSettingsBooksDir}"/>
         
         <Label Grid.Row="12" Grid.Column="0" Content="{local:Lng SettingsDebug}" Target="{Binding ElementName=Debug}" />
-        <Button Grid.Row="12" Grid.Column="1" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
+        <Button Grid.Row="12" Grid.Column="2" Name="Debug" Content="{local:Lng SettingsConsole}" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Debug_OnClick" ToolTip="{local:Lng HintSettingsDebug}"/>
 
     </Grid>
 </Window>
